--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark p-0">
             <a href="index.html" class="navbar-brand">
-                <h1 class="text-white">NSCET<span class="text-dark"></span></h1>
+                <img class="logonscet" src="img/nscetlogo.png" alt="NSCET Logo" >
             </a>
             <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -69,7 +69,6 @@
                             <a href="idea-ppt.html" class="dropdown-item">Idea PPT</a>
                             <a href="internal-hackathon-process.html" class="dropdown-item"> Hackathon Process</a>
                             <a href="img/Rules%20&%20Regulations%20for%20Hackathon.pdf" class="dropdown-item">Hackathon Guidelines</a>
-
                         </div>
                     </div>
                     <a href="Problem_Statements.html" class="nav-item nav-link">Problem Statements</a>
@@ -83,6 +82,7 @@
     </div>
 </div>
 <!-- Navbar End -->
+
 
 
 
