--- a/Problem_Statements.html
+++ b/Problem_Statements.html
@@ -89,46 +89,48 @@
         </div>
     </div>
 
-<!-- Total Statements Start -->
-<!-- Total Statements Section Start -->
-<section class="total-statement totstat">
-    <div class="container">
-        <!-- Centered Heading -->
-        <div class="row">
-            <div class="col-md-12 text-center mb-4">
-                <h2>Problem Statement </h2>
+    <section class="total-statement totstat">
+        <div class="container">
+            <!-- Centered Heading -->
+            <div class="row">
+                <div class="col-md-12 text-center mb-4">
+                    <h2 class="heading-spacing">Problem Statement</h2>
+                </div>
             </div>
-        </div>
-
-        <!-- Total Statements Content -->
-        <div class="row">
-            <div class="col-md-12">
-                <div class="statement-box">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h3>Total Statements</h3>
-                            <p>As per available data</p>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="hard">
-                                <h3>00</h3>
-                                <p>Hardware</p>
+    
+            <!-- Total Statements Content -->
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="statement-box">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3 class="ts">Total Statements</h3>  
                             </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="soft">
-                                <h3>00</h3>
-                                <p>Software</p>
+                            <div class="col-md-3">
+                                <div class="hard statement-type">
+                                    <div class="icon">
+                                        <i class="fas fa-microchip"></i>
+                                    </div>
+                                    <h3>00</h3>
+                                    <p>Hardware</p>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="soft statement-type">
+                                    <div class="icon">
+                                        <i class="fas fa-code"></i>
+                                    </div>
+                                    <h3>00</h3>
+                                    <p>Software</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<!-- Total Statements Section End -->
-
+    </section>
+    
 
         <!-- Theme Selection -->
         <div class="row mt-5">
