--- a/index.html
+++ b/index.html
@@ -271,7 +271,10 @@
 <div class="container-fluid py-5">
     <div class="container">
         <div class="text-center mb-5">
-            <h1 class="mb-4">Why Hackathons are Important </h1>
+            <h1 class="mb-4">
+                <img src="img/important.png" alt="Important Logo" class="heading-logo">
+                Why Hackathons are Important
+            </h1>
         </div>
         <div class="row g-5">
             <div class="col-md-6 col-lg-3 mb-4">
@@ -298,54 +301,10 @@
                     <p>Engage with talented youngsters who provide innovative and unconventional solutions to pressing issues.</p>
                 </div>
             </div>
- 
-            </div>
         </div>
     </div>
 </div>
 <!-- Why Hackathons are Important End -->
-
-<section class="milestones-section">
-    <div class="container-fluid mb-5">
-        <div class="row paddLandingPage">
-            <div class="col-md-12">
-                <div class="banner-bottom-color-div">
-                    <div class="banner-bottom-top">
-                        <h3>Hackathon Milestones</h3>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-lg-3 bdrRight">
-                            <div class="count-div">
-                                <h4>700</h4>
-                                <p>Participating Students</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 bdrRight">
-                            <div class="count-div2">
-                                <h4>60+</h4>
-                                <p>Mentors</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 bdrRight">
-                            <div class="count-div3">
-                                <h4>2633</h4>
-                                <p>Participating Institutes</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 bdrRight">
-                            <div class="count-div3">
-                                <h4>120</h4>
-                                <p>Total Problem Statements</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
 
 <!-- Organizing Committee Start -->
 <div class="container-fluid py-5">
@@ -380,7 +339,6 @@
 </div>
 <!-- Organizing Committee End -->
 
-
 <div class="container-xxl py-5">
     <div class="container py-5">
         <div class="text-center mb-5">
@@ -390,17 +348,16 @@
             <div class="col-md-6 d-flex justify-content-center">
                 <!-- NSCET Logo -->
                 <div class="logo-wrapper me-4">
-                    <img class="img-fluid rounded border border-primary p-3" src="img/nscetlogo.jpeg" alt="NSCET Logo" style="max-width: 200px;">
+                    <img class="img-fluid logo-img" src="img/nscetlogo.png" alt="NSCET Logo">
                 </div>
                 <!-- TMHNU Logo -->
                 <div class="logo-wrapper">
-                    <img class="img-fluid rounded border border-primary p-3" src="img/tmhnu.jpeg" alt="TMHNU Logo" style="max-width: 200px;">
+                    <img class="img-fluid logo-img" src="img/tmhnu.jpeg" alt="TMHNU Logo">
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 
 <footer style="padding-top: 30px;">
