--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Guidelines</a>
                         <div class="dropdown-menu bg-light mt-2">
-                            <a href="idea-ppt.html" class="dropdown-item">Idea PPT</a>
-                            <a href="internal-hackathon-process.html" class="dropdown-item"> Hackathon Process</a>
+                            <a href="#idea-ppt.html" class="dropdown-item">Idea PPT</a>
+                            <a href="#internal-hackathon-process.html" class="dropdown-item"> Hackathon Process</a>
                             <a href="img/Rules%20&%20Regulations%20for%20Hackathon.pdf" class="dropdown-item">Hackathon Guidelines</a>
                         </div>
                     </div>
@@ -279,24 +279,28 @@
         <div class="row g-5">
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="feature-box">
+                    <img src="img/inovative-solution-1.png" alt="inovative-solution" class="heading-logo">
                     <h3 class="feature-title">Innovative Solutions</h3>
                     <p>Hackathons offer cost-effective and creative solutions to complex problems, leveraging diverse perspectives and cutting-edge technologies.</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="feature-box">
-                    <h3 class="feature-title">Nation Building and Brand Visibility</h3>
-                    <p>Participating in hackathons provides an opportunity to contribute to nation-building and enhances your company's brand visibility among top talent and premier institutions.</p>
+                    <img src="img/collaboration.png" alt="recog-visiblity-1" class="heading-logo">
+                    <h3 class="feature-title">Focusing on collaboration</h3>
+                    <p>Participating in hackathons fosters collaboration that contributes to nation-building and enhances your company's brand visibility among top talent and premier institutions.</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="feature-box">
-                    <h3 class="feature-title">National Recognition</h3>
-                    <p>Gain national recognition and visibility for your company across key institutions and networks in India.</p>
+                    <img src="img/Thinking.png" alt="out-of-box-solution-1" class="heading-logo">
+                    <h3 class="feature-title">Thinking Beyond Boundaries</h3>
+                    <p>Elevate your company's presence by gaining national recognition and visibility across key institutions and networks in India, positioning yourself as a leader in innovative thinking and impactful solutions.</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="feature-box">
+                    <img src="img/out-of-box-solution-1.png" alt="out-of-box-solution-1" class="heading-logo">
                     <h3 class="feature-title">Out-of-the-Box Solutions</h3>
                     <p>Engage with talented youngsters who provide innovative and unconventional solutions to pressing issues.</p>
                 </div>
@@ -323,15 +327,15 @@
             <div class="col-md-4 text-center mb-4">
                 <div class="committee-member">
                     <img src="img/mathavan.jpg" alt="Mathavan" class="img-fluid">
-                    <h5>Mathavan</h5>
-                    <p>Vice Principal</p>
+                    <h5>Mr.N.MATHAVAN</h5>
+                    <p>Vice Principal,NSCET</p>
                 </div>
             </div>
             <div class="col-md-4 text-center mb-4">
                 <div class="committee-member">
                     <img src="img/Sathya.jpg" alt="Sathya" class="img-fluid">
-                    <h5>Sathya</h5>
-                    <p>Vice Principal</p>
+                    <h5>Dr.M.Sathya</h5>
+                    <p>Vice Principal,NSCET</p>
                 </div>
             </div>
         </div>
@@ -394,7 +398,7 @@
                         </li>
                     </ul>
                     
-                    <p style="margin-top: 15px;">© 2024-25 NSCET  Hackathon. All rights reserved</p>
+                    <p style="margin-top: 15px;"></p>
                 </div>
             </div>
 
@@ -416,8 +420,33 @@
             </div>
         </div>
     </div>
-</footer>
 
+
+
+<div class="copyright container" style="display: flex;justify-content: space-between;">
+    <div style="filter: drop-shadow(0px 0px 30px rgba(255, 255, 255, 0.7));">
+        <img width="100px" src="https://nscet.org/waves23/public/images/logos/ispin-logo.png" alt="" srcset="">
+    </div>
+    <div class="container"  style="text-align: center;">
+        <p>
+            Copyright &copy;
+            <!-- <script data-cfasync="false"
+                src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script> -->
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            All rights reserved. Design & Developed with by,
+            <br />
+            <span style="color: tomato;">Innovative Software Product Industry of NSCET </span>
+            <br />
+        </p>
+    </div>
+    <div style="filter: drop-shadow(0px 0px 30px rgba(255, 255, 255, 0.7));">
+        <img width="150px" src="https://nscet.org/waves23/public/images/logos/clg-logo.png" alt="" srcset="">
+    </div>
+</div>
+
+</footer>
 
 
 
