--- a/Register.html
+++ b/Register.html
@@ -34,7 +34,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark p-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="text-white">NSCET</h1>
+                    <img class="logonscet" src="img/nscetlogo.png" alt="NSCET Logo" >
                 </a>
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -53,14 +53,14 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Guidelines</a>
                             <div class="dropdown-menu bg-light mt-2">
-                                <a href="idea-ppt.html" class="dropdown-item">Idea PPT</a>
-                                <a href="internal-hackathon-process.html" class="dropdown-item">Hackathon Process</a>
+                                <a href="#idea-ppt.html" class="dropdown-item">Idea PPT</a>
+                                <a href="#internal-hackathon-process.html" class="dropdown-item">Hackathon Process</a>
                                 <a href="img/Rules%20&%20Regulations%20for%20Hackathon.pdf" class="dropdown-item">Hackathon Guidelines</a>
                             </div>
                         </div>
                         <a href="Problem_Statements.html" class="nav-item nav-link">Problem Statements</a>
                         <a href="faq.html" class="nav-item nav-link">FAQs</a>
-                        <a href="Login/Register.html" class="nav-item nav-link">Login/Register</a>
+                        <a href="Register.html" class="nav-item nav-link">Register</a>
                     </div>
                     <button type="button" class="btn text-white p-0 d-none d-lg-block" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></button>
