--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>AI.Tech - Artificial Intelligence HTML Template</title>
+    <title>NSCET HACKATHON 2024</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -41,13 +41,12 @@
         </div>
     </div>
     <!-- Spinner End -->
-
 <!-- Navbar Start -->
 <div class="container-fluid sticky-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark p-0">
             <a href="index.html" class="navbar-brand">
-                <img class="logonscet" src="img/nscetlogo.png" alt="NSCET Logo" >
+                <img class="logonscet" src="img/nscetlogo.png" alt="NSCET Logo">
             </a>
             <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -67,21 +66,21 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Guidelines</a>
                         <div class="dropdown-menu bg-light mt-2">
                             <a href="#idea-ppt.html" class="dropdown-item">Idea PPT</a>
-                            <a href="#internal-hackathon-process.html" class="dropdown-item"> Hackathon Process</a>
+                            <a href="#internal-hackathon-process.html" class="dropdown-item">Hackathon Process</a>
                             <a href="img/Rules%20&%20Regulations%20for%20Hackathon.pdf" class="dropdown-item">Hackathon Guidelines</a>
                         </div>
                     </div>
                     <a href="Problem_Statements.html" class="nav-item nav-link">Problem Statements</a>
                     <a href="faq.html" class="nav-item nav-link">FAQs</a>
-                    <a href="Register.html" class="nav-item nav-link"> Hackathon Register</a>
+                    <a href="Project_Implementation.html" class="nav-item nav-link">Project Implementation</a>
+                    <a href="Register.html" class="nav-item nav-link">Hackathon Register</a>
                 </div>
-                <button type="button" class="btn text-white p-0 d-none d-lg-block" data-bs-toggle="modal"
-                    data-bs-target="#searchModal"><i class="fa fa-search"></i></button>
             </div>
         </nav>
-    </div>
+    </div>  
 </div>
 <!-- Navbar End -->
+
 
 
 
@@ -91,7 +90,8 @@
         <div class="container pt-5">
             <div class="row g-5 pt-5">
                 <div class="col-lg-6 align-self-center text-center text-lg-start mb-lg-5">
-                    <div class="btn btn-sm border rounded-pill text-white px-3 mb-3 animated slideInRight">Hack 2024</div>
+                    <a href="img/poster.jpeg" class="btn-custom">Hack 2024</a>
+          
                     <h1 class="display-4 text-white mb-4 animated slideInRight">NSCET Hackathon 2024</h1>
                     <p class="text-white mb-4 animated slideInRight">Join us for an exhilarating journey of innovation and creativity at the NSCET Hackathon 2024! This event is designed to challenge your problem-solving skills and push the boundaries of technology. Whether you're a seasoned coder or just starting, there's a place for you to shine. Get ready to collaborate, compete, and create solutions that can make a real impact.</p>
                     <a href="Problem_Statements.html" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight">
@@ -127,9 +127,15 @@
     </div>
     <!-- Full Screen Search End -->
 
-
-    <!-- About Start -->
-
+    <div class="scroll-container">
+        <marquee>
+            <a href="Problem_Statements.html" style="text-decoration: none; color: inherit;">
+                <img class="img_scroll" src="img/new.png" alt="Announcement"> 
+                NSCET HACKTHON 2024 Problem Statements are live
+            </a>
+        </marquee>
+    </div>
+    
 
 <!-- WHAT IS NSCET HACKATHON 2024? Start -->
 <div class="container-fluid py-5">
@@ -349,9 +355,9 @@
             <h1 class="mb-4">Our Organisers</h1>
         </div>
         <div class="row justify-content-center">
-            <div class="col-md-6 d-flex justify-content-center">
+            <div class="col-md-6 d-flex flex-column align-items-center">
                 <!-- NSCET Logo -->
-                <div class="logo-wrapper me-4">
+                <div class="logo-wrapper mb-4">
                     <img class="img-fluid logo-img" src="img/nscetlogo.png" alt="NSCET Logo">
                 </div>
                 <!-- TMHNU Logo -->
@@ -362,6 +368,7 @@
         </div>
     </div>
 </div>
+
 
 
 <footer style="padding-top: 30px;">
