--- a/Register.html
+++ b/Register.html
@@ -29,45 +29,45 @@
 </head>
 
 <body>
-    <!-- Navbar Start -->
-    <div class="container-fluid sticky-top" style="background-color: #1363C6;">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark p-0">
-                <a href="index.html" class="navbar-brand">
-                    <img class="logonscet" src="img/nscetlogo.png" alt="NSCET Logo" >
-                </a>
-                <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About Hackathon</a>
-                            <div class="dropdown-menu bg-light mt-2">
-                                <a href="index.html#process-timeline" class="dropdown-item">Hackathon Process Flow</a>
-                                <a href="index.html#themes-section" class="dropdown-item">Hackathon Themes</a>
-                            </div>
+<!-- Navbar Start -->
+<div class="container-fluid sticky-top" style="background-color: #1363C6;">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark p-0">
+            <a href="index.html" class="navbar-brand">
+                <img class="logonscet" src="img/nscetlogo.png" alt="NSCET Logo">
+            </a>
+            <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
+                data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ms-auto">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About Hackathon</a>
+                        <div class="dropdown-menu bg-light mt-2">
+                            <a href="index.html#process-timeline" class="dropdown-item">Hackathon Process Flow</a>
+                            <a href="index.html#themes-section" class="dropdown-item">Hackathon Themes</a>
                         </div>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Guidelines</a>
-                            <div class="dropdown-menu bg-light mt-2">
-                                <a href="#idea-ppt.html" class="dropdown-item">Idea PPT</a>
-                                <a href="#internal-hackathon-process.html" class="dropdown-item">Hackathon Process</a>
-                                <a href="img/Rules%20&%20Regulations%20for%20Hackathon.pdf" class="dropdown-item">Hackathon Guidelines</a>
-                            </div>
-                        </div>
-                        <a href="Problem_Statements.html" class="nav-item nav-link">Problem Statements</a>
-                        <a href="faq.html" class="nav-item nav-link">FAQs</a>
-                        <a href="Register.html" class="nav-item nav-link">Register</a>
                     </div>
-                    <button type="button" class="btn text-white p-0 d-none d-lg-block" data-bs-toggle="modal"
-                        data-bs-target="#searchModal"><i class="fa fa-search"></i></button>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Guidelines</a>
+                        <div class="dropdown-menu bg-light mt-2">
+                            <a href="#idea-ppt.html" class="dropdown-item">Idea PPT</a>
+                            <a href="#internal-hackathon-process.html" class="dropdown-item">Hackathon Process</a>
+                            <a href="img/Rules%20&%20Regulations%20for%20Hackathon.pdf" class="dropdown-item">Hackathon Guidelines</a>
+                        </div>
+                    </div>
+                    <a href="Problem_Statements.html" class="nav-item nav-link">Problem Statements</a>
+                    <a href="faq.html" class="nav-item nav-link">FAQs</a>
+                    <a href="Project_Implementation.html" class="nav-item nav-link">Project Implementation</a>
+                    <a href="Register.html" class="nav-item nav-link">Hackathon Register</a>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
     </div>
+</div>
+<!-- Navbar End -->
 
     <!-- Full Screen Search Start -->
     <div class="modal fade" id="searchModal" tabindex="-1">
