problem statement.html add Category Organization

--- a/Problem_Statements.html
+++ b/Problem_Statements.html
@@ -136,9 +136,9 @@
 <!-- Container for all selection sections -->
 <div class="container mt-5">
     <div class="row">
-        <!-- Theme Selection -->
+        <!-- Section 1 -->
         <div class="col-md-4 mb-4">
-            <div class="theme-selection">
+            <div class="section-one">
                 <label for="theme-select">Select Theme</label>
                 <select id="theme-select" class="form-select">
                     <option value="">Choose a Theme</option>
@@ -164,9 +164,9 @@
             </div>
         </div>
 
-        <!-- Category Selection -->
+        <!-- Section 2 -->
         <div class="col-md-4 mb-4">
-            <div class="theme-selection">
+            <div class="section-two">
                 <label for="category-select">Category</label>
                 <select id="category-select" class="form-select">
                     <option value="">Choose a Category</option>
@@ -176,9 +176,9 @@
             </div>
         </div>
 
-        <!-- Organization Selection -->
+        <!-- Section 3 -->
         <div class="col-md-4 mb-4">
-            <div class="theme-selection">
+            <div class="section-three">
                 <label for="organization-select">Organization</label>
                 <select id="organization-select" class="form-select">
                     <option value="">Choose an Organization</option>
@@ -190,6 +190,7 @@
         </div>
     </div>
 </div>
+
 
         <!-- Table Start -->
         <div class="row mt-5">
