--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <div class="container-fluid sticky-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark p-0">
-            <a href="index.html" class="navbar-brand">
-                <img class="logonscet" src="img/nscetlogo.png" alt="NSCET Logo">
+            <a href="index.html" class="navbar-brand    ">
+                <img class="logonscet" src="img/nscetlogo.png" alt="NSCET Logo" width="80px">
             </a>
             <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -354,15 +354,14 @@
         <div class="text-center mb-5">
             <h1 class="mb-4">Our Organisers</h1>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-md-6 d-flex flex-column align-items-center">
+            <div class="logo-section">
                 <!-- NSCET Logo -->
-                <div class="logo-wrapper mb-4">
-                    <img class="img-fluid logo-img" src="img/nscetlogo.png" alt="NSCET Logo">
+                <div class="logo-wrapper">
+                    <img class="img-fluid logo-img" src="img/nscetlogo.png" alt="NSCET Logo" width="380px">
                 </div>
                 <!-- TMHNU Logo -->
                 <div class="logo-wrapper">
-                    <img class="img-fluid logo-img" src="img/tmhnu.jpeg" alt="TMHNU Logo">
+                    <img class="img-fluid logo-img" src="img/tmhnu.png" alt="TMHNU Logo" width="380px">
                 </div>
             </div>
         </div>
