--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">    
 </head>
 
 <body>
@@ -130,7 +130,7 @@
     <div class="scroll-container">
         <marquee>
             <a href="Problem_Statements.html" style="text-decoration: none; color: inherit;">
-                <img class="img_scroll" src="img/new.png" alt="Announcement"> 
+                <img class="img_scroll" src="img/newstar.gif" alt="Announcement"> 
                 NSCET HACKTHON 2024 Problem Statements are live
             </a>
         </marquee>
