--- a/argon-dashboard-master/pages/dashboard.html
+++ b/argon-dashboard-master/pages/dashboard.html
@@ -85,7 +85,7 @@
   </aside>
   <main class="main-content position-relative border-radius-lg ">
     <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur" data-scroll="false">
+    <!-- <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur" data-scroll="false">
       <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
@@ -198,9 +198,9 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav> -->
     <!-- End Navbar -->
-    <div class="container-fluid py-4">
+    <!-- <div class="container-fluid py-4">
       <div class="row">
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
@@ -365,8 +365,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row mt-4">
+      </div> -->
+      <!-- <div class="row mt-4">
         <div class="col-lg-7 mb-lg-0 mb-4">
           <div class="card ">
             <div class="card-header pb-0 p-3">
@@ -573,8 +573,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <footer class="footer pt-3  ">
+      </div> -->
+      <!-- <footer class="footer pt-3  ">
         <div class="container-fluid">
           <div class="row align-items-center justify-content-lg-between">
             <div class="col-lg-6 mb-lg-0 mb-4">
@@ -605,7 +605,390 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer> -->
+
+
+
+
+
+
+
+<!-- input details -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team Dashboard</title>
+    <style>
+      body {
+        font-family: "source-code-pro", monospace !important;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+
+    .dashboard {
+        width: 100%;
+        max-width: 1000px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+    }
+
+    .header {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        animation: fadeIn 1s ease-in-out;
+    }
+
+    .team-details, .idea-details {
+        width: 48%;
+        padding: 20px;
+        background-color: #f8f9fa;
+        border-radius: 8px;
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s, font-size 0.3s;
+        font-size: 24px;
+    }
+
+    .team-details:hover, .idea-details:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+    }
+
+    .team-details h2, 
+    .idea-details h2 {
+        margin: 0 0 10px;
+        font-size: 24px;
+        color: #344767;
+    }
+
+    .team-details p, 
+    .idea-details p {
+        margin: 0;
+        font-size: 24px;
+        color: #344767;
+    }
+
+    .team-details span, 
+    .idea-details span {
+        color: #007bff;
+        font-weight: bold;
+    }
+
+    .team-members {
+        background-color: #f8f9fa;
+        border-radius: 8px;
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        animation: fadeIn 1.5s ease-in-out;
+    }
+
+    .members-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    .add-member-btn {
+        padding: 5px 10px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .add-member-btn:hover {
+        background-color: #0056b3;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    li {
+        padding: 10px;
+        border-bottom: 1px solid #ddd;
+    }
+
+    li:last-child {
+        border-bottom: none;
+    }
+
+    .footer {
+        text-align: center;
+        padding-top: 20px;
+        color: #666;
+    }
+
+    /* Animation */
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    /* Modal Styles */
+    .modal {
+        display: none; 
+        position: fixed; 
+        z-index: 1; 
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto; 
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0,0.4); 
+        padding-top: 60px; 
+    }
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: 5% auto; 
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%; 
+        max-width: 600px; 
+        border-radius: 8px;
+    }
+
+    .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    .form-group {
+        margin-bottom: 15px;
+    }
+
+    .form-group label {
+        display: block;
+        margin-bottom: 5px;
+    }
+
+    .form-group input, .form-group select {
+        width: 100%;
+        padding: 8px;
+        border-radius: 4px;
+        border: 1px solid #ddd;
+    }
+
+    .form-group button {
+        padding: 10px 15px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .form-group button:hover {
+        background-color: #0056b3;
+    }
+    </style>
+</head>
+<body>
+    <div class="dashboard">
+        <header class="header">
+            <h1>Team Dashboard</h1>
+        </header>
+
+        <div class="container">
+            <!-- Team Details Section (Left) -->
+            <div class="team-details">
+                <h2>Team Name: <span>TechCreed</span></h2>
+                <p>Team Leader: <span>Mukilan</span></p>
+            </div>
+
+            <!-- Idea Details Section (Right) -->
+            <div class="idea-details">
+                <p>Mentor: <span>L.S.Vignesh</span></p>
+                <p>Submitted Idea: <span>AI-based Smart Irrigation System</span></p>
+            </div>
+        </div>
+
+        <!-- Team Members Section -->
+        <div class="team-members">
+            <div class="members-header">
+                <h2>Team Members</h2>
+                <button class="add-member-btn">Add Member</button>
+            </div>
+            <ul id="membersList">
+                <li>Mukilan</li>
+                <li>Tenshkumar</li>
+                <li>Srihari</li>
+                <li>Mark</li>
+                <li>Sandhosh</li>
+            </ul>
+        </div>
+
+        <footer class="footer">
+            <p>&copy; 2024 Team Dashboard</p>
+        </footer>
+    </div>
+
+    <!-- Modal -->
+    <div id="memberModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Add New Member</h2>
+            <div class="form-group">
+                <label for="regNumber">Registration Number:</label>
+                <input type="text" id="regNumber" placeholder="Enter registration number">
+            </div>
+            <div class="form-group">
+                <label for="memberName">Name:</label>
+                <input type="text" id="memberName" placeholder="Enter member name">
+            </div>
+            <div class="form-group">
+                <label for="department">Department:</label>
+                <select id="department">
+                    <option value="">Select Department</option>
+                    <option value="CSE">Computer Science</option>
+                    <option value="IT">Information Technology</option>
+                    <option value="ECE">Electronics & Communication</option>
+                    <option value="EEE">Electrical & Electronics</option>
+                    <!-- Add more options as needed -->
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="year">Year:</label>
+                <select id="year">
+                    <option value="">Select Year</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="email">Email ID:</label>
+                <input type="email" id="email" placeholder="Enter email ID">
+            </div>
+            <div class="form-group">
+                <button id="submitMemberBtn">Add Member</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const addMemberButton = document.querySelector('.add-member-btn');
+        const modal = document.getElementById('memberModal');
+        const closeButton = document.querySelector('.close');
+        const submitButton = document.getElementById('submitMemberBtn');
+        const membersList = document.getElementById('membersList');
+
+        addMemberButton.addEventListener('click', () => {
+            modal.style.display = 'block';
+        });
+
+        closeButton.addEventListener('click', () => {
+            modal.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+
+        submitButton.addEventListener('click', () => {
+            const regNumber = document.getElementById('regNumber').value;
+            const memberName = document.getElementById('memberName').value;
+            const department = document.getElementById('department').value;
+            const year = document.getElementById('year').value;
+            const email = document.getElementById('email').value;
+
+            if (regNumber && memberName && department && year && email) {
+                const newMember = `${memberName} (${regNumber})`;
+                const li = document.createElement('li');
+                li.textContent = newMember;
+                membersList.appendChild(li);
+                modal.style.display = 'none';
+                document.querySelectorAll('.form-group input, .form-group select').forEach(input => input.value = '');
+            } else {
+                alert('Please fill out all fields.');
+            }
+        });
+    });
+    </script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
   </main>
   <div class="fixed-plugin">
@@ -681,102 +1064,96 @@
     </div>
   </div>
   <!--   Core JS Files   -->
-  <script src="../assets/js/core/popper.min.js"></script>
+  <!-- <script src="../assets/js/core/popper.min.js"></script>
   <script src="../assets/js/core/bootstrap.min.js"></script>
   <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
   <script src="../assets/js/plugins/smooth-scrollbar.min.js"></script>
-  <script src="../assets/js/plugins/chartjs.min.js"></script>
+  <script src="../assets/js/plugins/chartjs.min.js"></script> -->
   <script>
-    var ctx1 = document.getElementById("chart-line").getContext("2d");
+    // var ctx1 = document.getElementById("chart-line").getContext("2d");
 
-    var gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
+    // var gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
 
-    gradientStroke1.addColorStop(1, 'rgba(94, 114, 228, 0.2)');
-    gradientStroke1.addColorStop(0.2, 'rgba(94, 114, 228, 0.0)');
-    gradientStroke1.addColorStop(0, 'rgba(94, 114, 228, 0)');
-    new Chart(ctx1, {
-      type: "line",
-      data: {
-        labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
-        datasets: [{
-          label: "Mobile apps",
-          tension: 0.4,
-          borderWidth: 0,
-          pointRadius: 0,
-          borderColor: "#5e72e4",
-          backgroundColor: gradientStroke1,
-          borderWidth: 3,
-          fill: true,
-          data: [50, 40, 300, 220, 500, 250, 400, 230, 500],
-          maxBarThickness: 6
+    // gradientStroke1.addColorStop(1, 'rgba(94, 114, 228, 0.2)');
+    // gradientStroke1.addColorStop(0.2, 'rgba(94, 114, 228, 0.0)');
+    // gradientStroke1.addColorStop(0, 'rgba(94, 114, 228, 0)');
+    // new Chart(ctx1, {
+    //   type: "line",
+    //   data: {
+    //     labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+    //     datasets: [{
+    //       label: "Mobile apps",
+    //       tension: 0.4,
+    //       borderWidth: 0,
+    //       pointRadius: 0,
+    //       borderColor: "#5e72e4",
+    //       backgroundColor: gradientStroke1,
+    //       borderWidth: 3,
+    //       fill: true,
+    //       data: [50, 40, 300, 220, 500, 250, 400, 230, 500],
+    //       maxBarThickness: 6
 
-        }],
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: {
-            display: false,
-          }
-        },
-        interaction: {
-          intersect: false,
-          mode: 'index',
-        },
-        scales: {
-          y: {
-            grid: {
-              drawBorder: false,
-              display: true,
-              drawOnChartArea: true,
-              drawTicks: false,
-              borderDash: [5, 5]
-            },
-            ticks: {
-              display: true,
-              padding: 10,
-              color: '#fbfbfb',
-              font: {
-                size: 11,
-                family: "Open Sans",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-          x: {
-            grid: {
-              drawBorder: false,
-              display: false,
-              drawOnChartArea: false,
-              drawTicks: false,
-              borderDash: [5, 5]
-            },
-            ticks: {
-              display: true,
-              color: '#ccc',
-              padding: 20,
-              font: {
-                size: 11,
-                family: "Open Sans",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-        },
-      },
-    });
-  </script>
-  <script>
-    var win = navigator.platform.indexOf('Win') > -1;
-    if (win && document.querySelector('#sidenav-scrollbar')) {
-      var options = {
-        damping: '0.5'
-      }
-      Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
-    }
+    //     }],
+    //   },
+    //   options: {
+    //     responsive: true,
+    //     maintainAspectRatio: false,
+    //     plugins: {
+    //       legend: {
+    //         display: false,
+    //       }
+    //     },
+    //     interaction: {
+    //       intersect: false,
+    //       mode: 'index',
+    //     },
+    //     scales: {
+    //       y: {
+    //         grid: {
+    //           drawBorder: false,
+    //           display: true,
+    //           drawOnChartArea: true,
+    //           drawTicks: false,
+    //           borderDash: [5, 5]
+    //         },
+    //         ticks: {
+    //           display: true,
+    //           padding: 10,
+    //           color: '#fbfbfb',
+    //           font: {
+    //             size: 11,
+    //             family: "Open Sans",
+    //             style: 'normal',
+    //             lineHeight: 2
+    //           },
+    //         }
+    //       },
+    //       x: {
+    //         grid: {
+    //           drawBorder: false,
+    //           display: false,
+    //           drawOnChartArea: false,
+    //           drawTicks: false,
+    //           borderDash: [5, 5]
+    //         },
+    //         ticks: {
+    //           display: true,
+    //           color: '#ccc',
+    //           padding: 20,
+    //           font: {
+    //             size: 11,
+    //             family: "Open Sans",
+    //             style: 'normal',
+    //             lineHeight: 2
+    //           },
+    //         }
+    //       },
+    //     },
+    //   },
+    // });
+
+
+   
   </script>
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
