--- a/argon-dashboard-master/pages/virtual-reality.html
+++ b/argon-dashboard-master/pages/virtual-reality.html
@@ -122,12 +122,13 @@
     <form action="#" method="post" enctype="multipart/form-data" class="form-content">
       <!-- Dropdown Section -->
       <div class="form-group">
-        <label for="dropdown">Select an option:</label>
-        <select id="dropdown" name="dropdown">
-          <option value="option1">Option 1</option>
-          <option value="option2">Option 2</option>
-          <option value="option3">Option 3</option>
-        </select>
+        <label for="dropdown">Select an PS ID :</label>
+        <input list="browsers" name="browser" id="browser">
+        <datalist  id="browsers" name="dropdown">
+          <option value="PSID">
+          <option value="PSID">
+          <option value="PSID">  
+        </datalist >
       </div>
 
       <!-- File Upload Section -->
